[package]
name = "mtl"
version = "0.1.0"
authors = ["Christian Junker <chjdev@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.36"
wasm-bindgen = "0.2.59"

[dependencies.web-sys]
version = "0.3.36"
features = [
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlInputElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
